styles/globals.css
/*Tailwind Core Styles*/
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Style of Selection */
::selection {
  background-color: #47a3f3;
  color: #fefefe;
}

img {
  user-select: none;
}

/* Custom Scrollbar */
body::-webkit-scrollbar {
  @apply w-2;
}

body::-webkit-scrollbar-track {
  @apply bg-gray-900;
}
body::-webkit-scrollbar-thumb {
  @apply bg-gray-500 rounded border-gray-200;
}

/* Smooth Scroll */
html {
  scroll-behavior: smooth;
}

/* Basic Reset */
#__next {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.prose pre {
  @apply bg-gray-50 border border-gray-200 dark:border-gray-700 dark:bg-gray-900;
}

.prose code {
  @apply text-gray-800 dark:text-gray-200 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-md bg-gray-100 dark:bg-gray-900;
}

.prose img {
  /* Don't apply styles to next/image */
  @apply m-0;
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  @apply text-gray-700 dark:text-gray-300;
}

.token.punctuation {
  @apply text-gray-700 dark:text-gray-300;
}

.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
  @apply text-green-700 dark:text-green-500;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  @apply text-purple-600 dark:text-purple-400;
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  @apply text-yellow-500;
}

.token.atrule,
.token.attr-value,
.token.keyword {
  @apply text-blue-600 dark:text-blue-500;
}

.token.function,
.token.class-name {
  @apply text-pink-700 dark:text-pink-500;
}

.token.regex,
.token.important,
.token.variable {
  @apply text-yellow-500;
}

code[class*='language-'],
pre[class*='language-'] {
  @apply text-gray-800 dark:text-gray-50;
}

pre::-webkit-scrollbar {
  display: none;
}

pre {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.remark-code-title {
  @apply text-gray-800 dark:text-gray-200 px-5 py-3 border border-b-0 border-gray-200 dark:border-gray-700 rounded-t bg-gray-200 dark:bg-gray-800 text-sm font-mono font-bold;
}

.remark-code-title + pre {
  @apply mt-0 rounded-t-none;
}

.mdx-marker {
  @apply block -mx-4 px-4 bg-gray-100 dark:bg-gray-800 border-l-4 border-blue-500;
}

input[type='text'],
input[type='email'] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

/* NProgress Dark and Light Mode */
#nprogress .bar {
  @apply dark:bg-gray-900 bg-gray-300 fixed z-50 top-0 left-0 w-full h-1;
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

.content {
  flex: 1 0 auto;
}

footer {
  flex-shrink: 0;
}

